[package]
name = "solana-chain-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Layr-Labs"]
description = "A Rust-based Solana blockchain indexing library"
license = "MIT"
repository = "https://github.com/Layr-Labs/solana-chain-indexer"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
solana-sdk = "1.18"
bs58 = "0.5"
async-trait = "0.1"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

